v1 definitions
