# api/v1alpha1/provider/types.gen.go
@@ -1,0 +1,104 @@
+// Package v1alpha1 provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
+package v1alpha1
+
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+// Defines values for ResourceResourceType.
+const (
+	ResourceResourceTypeContainer ResourceResourceType = "container"
+	ResourceResourceTypeVm        ResourceResourceType = "vm"
+)
+
+// Defines values for GetResourceParamsResourceType.
+const (
+	GetResourceParamsResourceTypeContainer GetResourceParamsResourceType = "container"
+	GetResourceParamsResourceTypeVm        GetResourceParamsResourceType = "vm"
+)
+
+// Defines values for RegisterServiceProviderParamsResourceType.
+const (
+	Container RegisterServiceProviderParamsResourceType = "container"
+	Vm        RegisterServiceProviderParamsResourceType = "vm"
+)
+
+// Error defines model for Error.
+type Error struct {
+	// Error Error message
+	Error string `json:"error"`
+
+	// Type Error type
+	Type string `json:"type"`
+}
+
+// Health defines model for Health.
+type Health struct {
+	// Path Canonical path of the resource
+	Path *string `json:"path,omitempty"`
+
+	// Status Health status
+	Status *string `json:"status,omitempty"`
+}
+
+// Options defines model for Options.
+type Options struct {
+	// AllowedMethods Allowed methods
+	AllowedMethods *[]string `json:"allowedMethods,omitempty"`
+}
+
+// ProviderService defines model for ProviderService.
+type ProviderService struct {
+	// Endpoint Endpoint of the service
+	Endpoint string `json:"endpoint"`
+
+	// Name Name of the service
+	Name string `json:"name"`
+}
+
+// ProviderServiceList defines model for ProviderServiceList.
+type ProviderServiceList struct {
+	Services []ProviderServiceResponse `json:"services"`
+}
+
+// ProviderServiceResponse defines model for ProviderServiceResponse.
+type ProviderServiceResponse struct {
+	// Endpoint Endpoint of the service
+	Endpoint string `json:"endpoint"`
+
+	// Id ID of the service
+	Id openapi_types.UUID `json:"id"`
+
+	// Name Name of the service
+	Name string `json:"name"`
+}
+
+// Resource defines model for Resource.
+type Resource struct {
+	Providers *[]ProviderServiceResponse `json:"providers,omitempty"`
+
+	// ResourceType Type of the resource
+	ResourceType ResourceResourceType `json:"resourceType"`
+
+	// Schema Schema of the resource
+	Schema map[string]interface{} `json:"schema"`
+}
+
+// ResourceResourceType Type of the resource
+type ResourceResourceType string
+
+// ResourceList defines model for ResourceList.
+type ResourceList struct {
+	Resources []Resource `json:"resources"`
+}
+
+// GetResourceParamsResourceType defines parameters for GetResource.
+type GetResourceParamsResourceType string
+
+// RegisterServiceProviderParamsResourceType defines parameters for RegisterServiceProvider.
+type RegisterServiceProviderParamsResourceType string
+
+// RegisterServiceProviderJSONRequestBody defines body for RegisterServiceProvider for application/json ContentType.
+type RegisterServiceProviderJSONRequestBody = ProviderService
